[package]
name = "next"
version = "0.1.0"
authors = ["shintaro.sakata <shintaro.sakata.tokyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next_parser = {path = "parser", version = "0.1.0"}
next_compiler = {path = "compiler", version = "0.1.0"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }